--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "description": "creating weather site",
   "main": "htm.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "start": "node nod.js"
   },
   "author": "Abhay kashyap",
   "license": "ISC",
